[package]
name = "sha2-const-stable"
version = "0.1.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
edition = "2018"
description = "const fn implementation of the SHA-2 family of hash functions. Based on sha2-const, but updated to use only stable rust"
documentation = "https://docs.rs/sha2-const"
readme = "README.md"
homepage = "https://github.com/saleemrashid/sha2-const"
repository = "https://github.com/saleemrashid/sha2-const"
license = "MIT OR Apache-2.0"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[dependencies]

[dev-dependencies]
hex = "0.4.2"
proptest = "0.9.6"
sha2 = "0.8.1"
